simple-kubernetes-with-priority/multiple-domains/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress-multiple
spec:
  rules:
    - host: foo-127-0-0-1.nip.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: hello-foo-service
                port:
                  name: http
    - host: foopdb-127-0-0-1.nip.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: hello-foo-pdb-service
                port:
                  name: http
    - host: bar-127-0-0-1.nip.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: hello-bar-service
                port:
                  name: http
    - host: barpdb-127-0-0-1.nip.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: hello-bar-pdb-service
                port:
                  name: http
    - host: baz-127-0-0-1.nip.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: hello-baz-service
                port:
                  name: http
    - host: foobar-127-0-0-1.nip.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: hello-foobar-service
                port:
                  name: http
